--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-masonry-list": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
